# Django-test-app

./: .env.templates  .gitignore  Dockerfile  docker-compose.yaml  pyproject.toml
mysite/mysite/: settings.py  urls.py
